Fixed overflow issue caused by scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-html, body {
-	overflow-y: hidden;
-}
 html, body, img, dl, dt, dd {
 	margin: 0;
 	padding: 0;
@@ -26,6 +23,7 @@ a:hover {
 	width: 100%;
 	height: 100%;
 	background-color: #23232D;
+	overflow: overlay;
 }
 
 #loader {
